# TorchSharp

./: .editorconfig  .gitignore  .vsts-dotnet-ci.yml  CONTRIBUTING.md  DEVGUIDE.md  Directory.Build.props  Directory.Build.targets  DotnetCLIVersion.txt  LICENSE  Makefile  MyCustomCMD.txt  README.md  RELEASENOTES.md  THIRD-PARTY-NOTICES.TXT  TestBFloat.cs  TorchSharp.sln  TorchSharpFilter.slnf  TorchWorkbook.workbook  XmlYamlMapping.json  azure-pipelines.yml  build.cmd  build.proj  build.sh  buildlibtorch.cmd  config.json  global.json  init-tools.cmd  init-tools.sh  linux_cuda.txt  nuget.config  run.cmd  run.sh  test_bfloat.csx  windows_cuda.txt
.github/: labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  missing-feature.md  question.md
.github/scripts/: triage-issue.py
.github/workflows/: issue-triage.yml  labeler.yml  release-drafter.yml  test.yml  update-releasenotes.yml
AtenSharp/: AtenSharp.csproj  FileOperations.cs  FileOperations.tt  PreprocessedT4Template.cs  THRandom.cs  TypeGeneration.cs  TypeGeneration.tt
AtenSharp/Raw/: Vector.generated.cs  Vector.tt
Examples/: Examples.csproj  MNIST.cs
InteresaaatTorchSharp/: Makefile  XmlYamlMapping.json  azure-pipelines.yml
InteresaaatTorchSharp/AtenSharp/: AtenSharp.csproj  FileOperations.cs  FileOperations.tt  NNSupport.cs  PreprocessedT4Template.cs  THDiskFile.cs  THFile.cs  THMemoryFile.cs  THRandom.cs  TypeGeneration.cs  TypeGeneration.tt
InteresaaatTorchSharp/Examples/: Examples.csproj  README.md
InteresaaatTorchSharp/SNT/: SNT.csproj  TypeGenerator.cs  TypeGenerator.tt  Utils.cs
InteresaaatTorchSharp/TorchSharp/: Autograd.cs  ExtensionMethods.cs  PinnedArray.cs  TorchSharp.csproj
InteresaaatTorchSharp/docfx/: docfx.json
InteresaaatTorchSharp/docs/: manifest.json  toc.html
InteresaaatTorchSharp/test/: SNTUnitTestGenerator.cs  SNTUnitTestGenerator.tt
PytorchSharp/: PreprocessedT4Template.tt  PytorchSharp.csproj  PytorchSharp.sln  THRandom.cs  TorchSharp.csproj  TypeGeneration.cs  TypeGeneration.tt
PytorchSharp/Tester/: Program.cs  Tester.csproj
SNT/: NativeMemoryManager.cs  SNT.csproj  TypeGeneration.cs  TypeGenerator.cs  TypeGenerator.tt  Utils.cs
Samples/: Program.cs  Samples.csproj
Test/: BasicTensorAPI.cs  DiskFiles.cs  FloatTorchTensorUnitTest.cs  MatrixAndVectorOps.cs  MemoryFiles.cs  SNTUnitTestGenerator.cs  SNTUnitTestGenerator.tt  Test.csproj  TorchSharp.cs  TorchSharpBaseUnitTest.cs  TorchTensorUnitTestGenerator.cs  TorchTensorUnitTestGenerator.tt  UnaryTensorOps.cs  UnitTest1.cs  nuget.config
Test/AtenSharp/: BasicTensorAPI.cs  MemoryFiles.cs
Test/TorchSharp/: TorchSharp.cs
Tester/: Program.cs  Tester.csproj
TorchDotNet/: NativeMemoryManager.cs  TorchDotNet.csproj  TorchTensor.cs
TorchSharp/: .TypeGeneration.cs.swp  DiskFile.cs  ExtensionMethods.cs  FileOperations.cs  FileOperations.tt  Handle.cs  JIT.cs  JitModule.cs  Linear.cs  LossFunction.cs  Module.cs  NNSupport.cs  NativeMemoryManager.cs  PinnedArray.cs  Sequential.cs  THDiskFile.cs  THFile.cs  THMemoryFile.cs  THRandom.cs  Torch.cs  TorchFiles.cs  TorchSharp.csproj  TorchSharp.nuspec  TorchTensor.cs  TypeGeneration.cs  TypeGeneration.tt  foo
TorchSharp.Workbooks/: Class1.cs  TensorIntegration.cs  TorchSharp.Workbooks.csproj  TorchSharp.Workbooks.js
TorchSharp/Data/: DataIterator.cs  Loader.cs
TorchSharp/JIT/: Module.cs
TorchSharp/NN/: Conv2D.cs  Dropout.cs  FeatureDropout.cs  Functional.cs  FunctionalModule.cs  Init.cs  Linear.cs  LogSoftMax.cs  LossFunction.cs  MaxPool2D.cs  Module.cs  Optimizer.cs  Parameter.cs  ProvidedModule.cs  ReLu.cs  Sequential.cs
TorchSharp/Raw/: Blas.generated.cs  Blas.tt  Lapack.generated.cs  Lapack.tt  Types.ttinclude  Vector.generated.cs  Vector.tt
TorchSharp/Tensor/: ITorchTensor.cs  TorchTensor.cs  TorchTensor.generated.cs  TorchTensor.tt  TorchTensorTyped.generated.cs  TorchTensorTyped.tt
TorchSharp/nuget/: TorchSharp.targets
TorchTensor/: NativeMemoryManager.cs  TypeGeneration.cs  Utils.cs
config/: SignClient.json  signedfiles.txt
docfx/: docfx.json  index.md
docfx/api/: AllocatePinnedArray.yml  TorchSharp.Data.yml  TorchSharp.JIT.yml  TorchSharp.NN.yml  TorchSharp.Tensor.yml  TorchSharp.yml  index.md  toc.yml
docfx/articles/: memory leak troubleshooting.md  memory.md  modules.md  saveload.md  torchscript.md
docs/: Makefile  README.md  index.html  manifest.json  toc.html  xrefmap.yml
docs/api/: AllocatePinnedArray.html  TorchSharp.Data.html  TorchSharp.JIT.html  TorchSharp.NN.html  TorchSharp.Tensor.html  TorchSharp.html  index.html  toc.html
docs/docfx/: index.md
ecmadocs/en/: AllocatePinnedArray.xml  index.xml  ns-TorchSharp.Data.xml  ns-TorchSharp.JIT.xml  ns-TorchSharp.NN.xml  ns-TorchSharp.Tensor.xml  ns-TorchSharp.xml
pkg/: Directory.Build.props  Directory.Build.targets  pack.proj
pkg/LibTorch.Cuda.10.2.Redist/: LibTorch.Cuda.10.2.Redist.nupkgproj
pkg/LibTorch.Cuda.9.0.Redist/: LibTorch.Cuda.9.0.Redist.nupkgproj
pkg/LibTorch.GPU.Redist/: LibTorch.GPU.Redist.nupkgproj
pkg/LibTorch.Redist/: LibTorch.Redist.nupkgproj
pkg/TorchAudio/: CompatibilitySuppressions.xml  README.md  TorchAudio.nupkgproj
pkg/TorchSharp-cpu/: README.md  TorchSharp-cpu.nupkgproj
pkg/TorchSharp-cuda-linux/: README.md  (+1 more)
src/: Directory.Build.props  Directory.Build.targets  RELEASENOTES.md
src/AtenSharp/: THFile.cs  (+9 more)
src/Native/LibTorchSharp/: CMakeLists.txt  THSActivation.cpp  THSAmp.cpp  THSAmp.h  THSAutograd.cpp  THSAutograd.h  THSBFloat16.cpp  THSBFloat16.h  THSConvolution.cpp  THSCuda.cpp  THSCuda.h  THSData.cpp  THSData.h  THSExport.cpp  THSExport.h  THSFFT.cpp  THSHistogram.cpp  THSHistogram.h  THSJIT.cpp  THSJIT.h  THSLinearAlgebra.cpp  THSLoss.cpp  THSModule.cpp  THSNN.cpp  THSNN.h  THSNormalization.cpp  THSOptimizers.cpp  THSRandom.cpp  THSSpecial.cpp  THSStorage.cpp  THSStorage.h  THSTensor.cpp  THSTensor.h  THSTensorConv.cpp  THSTensorFactories.cpp  THSTensorMath.cpp  THSTorch.cpp  THSTorch.h  THSVision.cpp  THSVision.h  (+6 more)
test/: Directory.Build.props  Directory.Build.targets  Test.csproj  run-tests.proj
(+1292 files in other folders)
